--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Oru Darbas</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/341247ff7d.js" crossorigin="anonymous"></script>
+    <link href="style.css">
 </head>
 <body>
-<h1>Oru prognozes</h1>
-<label for="miestas" class="selector">Miestai:</label>
+<div class="container-fluid">
+    <h1>Oru prognozes</h1>
+    <label for="miestas" class="selector">Miestai:</label>
 
-<input list="miestai" id="miestas" name="miestas"/>
-<datalist id="miestai"></datalist>
+    <input list="miestai" id="miestas" name="miestas"/>
+    <datalist id="miestai"></datalist>
 
-<button class="button">Rodyti oru prognoze</button>
-<div class="oras"></div>
+    <button class="button">Rodyti oru prognoze</button>
+    <div class="oras"></div>
+</div>
 <script src="js/main.js"></script>
 </body>
 </html>
